feat: implement initial project structure with JavaFX UI, MongoDB service integration, and core task management models